--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
   <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="bird.js"></script>
-  <script language="javascript" type="text/javascript" src="pipe.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/nn.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/matrix.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/ga.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/bird.js"></script>
+  <script language="javascript" type="text/javascript" src="lib/pipe.js"></script>
 
 </head>
 
