--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
 
 <body>
 	<div id="bird-canvas"></div>
+  <p>
+    Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
+    <br/> high score: <span id="hs">0</span>
+    <br/> all time high score: <span id="ahs">0</span>
+  </p>
+  <p>
+    <button id="best">run best so far</button>
+  </p>
 </body>
 </html>
