--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<div id="bird-canvas"></div>
   <p>
     Speed: <input id="speedSlider" type="range" min="1" max="10" value="1"> <span id="speed">1</span>
-    <br/> high score: <span id="hs">0</span>
-    <br/> all time high score: <span id="ahs">0</span>
+    <br/> High score: <span id="hs">0</span>
+    <br/> All time high score: <span id="ahs">0</span>
   </p>
   <p>
     <button id="best">run best so far</button>
